--- a/index.css
+++ b/index.css
@@ -1,27 +1,33 @@
-main{
+main {
     display: flex;
     justify-content: center;
     z-index: 0;
-    
+
 }
-div#conteudo{
+
+div#conteudo {
+    margin-top: 20px;
     max-width: 1000px;
     width: 100%;
-    height: auto; min-height: 80vh;
+    height: auto;
+    min-height: 80vh;
     padding: 0px 20px 0px 20px;
     z-index: 1;
 }
 
 /*Categorias*/
-div#categoria p{
+div#categoria p {
     margin-block-start: 0;
 }
-div#categoria_imagens{
+
+div#categoria_imagens {
     display: flex;
     justify-content: start;
-    min-width: 100%; height: auto;
+    min-width: 100%;
+    height: auto;
 }
-div#categoria_imagens a{
+
+div#categoria_imagens a {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -29,54 +35,157 @@ div#categoria_imagens a{
     border-radius: 100%;
     background-size: contain;
 }
+
 div#categoria_imagens a:hover {
-    transition: transform 0.3s ease; 
-    transform: scale(1.05); 
+    transition: transform 0.3s ease;
+    transform: scale(1.05);
 }
-div#categoria_imagens a img{
+
+div#categoria_imagens a img {
     border-radius: 100%;
     padding: 0px 20px 0px 0px;
 }
 
 /*Receitas*/
-div#cardReceita{
+div#cardReceita {
     display: flex;
     justify-content: start;
     flex-wrap: wrap;
     width: 100%;
     height: auto;
 }
-div.conteudoReceitas{
+
+div.conteudoReceitas {
     width: 28%;
     min-height: 220px;
-    margin-right: 33px; 
-    margin-bottom: 33px; 
+    margin-right: 33px;
+    margin-bottom: 33px;
     padding: 10px;
     background-color: white;
     border-radius: 10px;
 }
+
 .conteudoReceitas:hover {
-    transition: transform 0.5s ease; 
-    transform: scale(1.05); 
+    transition: transform 0.5s ease;
+    transform: scale(1.05);
 }
-div.conteudoReceitas a{
+
+div.conteudoReceitas a {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-div.ImagemReceita img{
-    width: 220px; height: 150px;
+
+div.ImagemReceita img {
+    width: 220px;
+    height: 150px;
     border-radius: 10px;
     object-fit: cover;
 }
-div.NomeReceita p{
+
+div.NomeReceita p {
     width: 220px;
     margin-block: 5px;
     font-size: 1.2em;
 }
-div.DescricaoReceita p{
+
+div.DescricaoReceita p {
     width: 220px;
     margin-block: 5px;
     font-size: 1em;
+}
+
+/*Slider Style*/
+#slider {
+    margin: 0 auto;
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+    border-radius: 10px;
+}
+
+.slides {
+    width: 300%;
+    height: 100%;
+    display: flex;
+}
+
+#slider input {
+    display: none;
+}
+
+.slide {
+    width: 100%;
+    position: relative;
+}
+
+.slide img {
+    width: 100%;
+    height: 100%;
+}
+
+#navigation {
+    position: absolute;
+    width: 1000px;
+    display: flex;
+    margin-top: -40px;
+    justify-content: center;
+}
+
+.navigators {
+    padding: 15px;
+    margin: 0 10px;
+    border: 1px solid white;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
+}
+
+.navigators:hover {
+    background-color: #FB6107;
+}
+
+#radio1:checked~.slides {
+    margin-left: 0;
+    transition: 0.5s;
+}
+
+#radio2:checked~.slides {
+    margin-left: -100%;
+    transition: 0.5s;
+}
+
+#radio3:checked~.slides {
+    margin-left: -200%;
+    transition: 0.5s;
+}
+
+#navigation-auto div {
+    padding: 15px;
+    margin: 0 10px;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 1px solid white;
+    border-radius: 10px;
+}
+
+#navigation-auto {
+    width: 1000px;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    margin-top: -40px;
+}
+
+
+#radio1:checked~#navigation-auto #auto-btn1 {
+    background-color: #FB6107;
+}
+
+#radio2:checked~#navigation-auto #auto-btn2 {
+    background-color: #FB6107;
+}
+
+#radio3:checked~#navigation-auto #auto-btn3 {
+    background-color: #FB6107;
 }
